sumo/tests/sumo/errors/routes/testsuite.sumo
# Test repeated vehicle creation
repeat_norepno

# Test repeated vehicle creation
repeat_noperiod

# Tests what happens if the user uses a route containing only one edge
one_edge_route

# Test with a vehicle and no route given
no_route

# Test with a vehicle and a route which does not exist
false_route1

# Test with a vehicle and a route with an empty id
false_route2

# within emitters: a valid definition
ok_emitteremission

# within emitters: empty route
emptyroute_emitteremission

# within emitters: first edge is not in the network
first_edge_false__emitteremission

# within emitters: second edge is not in the network
second_edge_false__emitteremission

# within emitters: last edge is not in the network
last_edge_false__emitteremission

# plain emission, new style: a valid definition
ok_newstyle_plainemission

# plain emission, new style: empty route
emptyroute_newstyle_plainemission

# plain emission, new style: first edge is not in the network
first_edge_false__newstyle_plainemission

# plain emission, new style: second edge is not in the network
second_edge_false__newstyle_plainemission

# plain emission, new style: last edge is not in the network
last_edge_false__newstyle_plainemission

# plain emission, old style: a valid definition
ok_oldstyle_plainemission

# plain emission, old style: empty route
emptyroute_oldstyle_plainemission

# plain emission, old style: first edge is not in the network
first_edge_false__oldstyle_plainemission

# plain emission, old style: second edge is not in the network
second_edge_false__oldstyle_plainemission

# plain emission, old style: last edge is not in the network
last_edge_false__oldstyle_plainemission
